片上flash保存数据

--- a/Project/MDK-ARM/GY_86_demo.uvprojx
+++ b/Project/MDK-ARM/GY_86_demo.uvprojx
@@ -578,6 +578,16 @@
               <FileType>1</FileType>
               <FilePath>..\..\BSP\timer.c</FilePath>
             </File>
+            <File>
+              <FileName>receivedata.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\BSP\receivedata.c</FilePath>
+            </File>
+            <File>
+              <FileName>stmflash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\BSP\stmflash.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
